welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:40: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerCase'
override def run() {
             ^